# H264_server_hiveboard

./: README  config.h.in  configure  configure.in  configure.scan  transferToBoard.sh
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/audio/: Makefile.am  Makefile.in  adpcm.c  adpcm.h  audio.c  buffer.c  record.c
src/core/: Makefile.am  Makefile.in  main.c
src/include/: audio.h  network.h  slice_analyse.h
src/include/p2p/: DSet.h  JEAN_P2P.h  ring.h
src/network/: Makefile.am  Makefile.in  network.c  prase_pkt.c
src/p2p_master/: Makefile.am  Makefile.in  p2p_master.c
src/slice_analyse/: Makefile.am  Makefile.in  slice_analyse.c
src/video/: Makefile.am  Makefile.in  SONiX_UVC_TestAP.c  camera.c  v4l2.c
